test: 가독성을 위해 테스트 분리
Co-authored-by: saera-yook <yook.saera@gmail.com>